fixed the scrollbar issue

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body {
+    overflow: hidden;
+}
+
 #root {
     background-color: #131313;
     min-width: 100vw;
